--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,6 @@ ul .active{
     background-color: #ff4f00;
     color: white;
     border-radius: 30px;
+    font-size: 1.2rem;
+    padding: 20px
 }
